--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,10 @@ h1, h2 {
     font-family: Oswald, Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
 }
 
+h4 {
+    font-size: 2rem;
+}
+
 p {
     font-size: 1.25rem;
     color: white;
@@ -20,6 +24,10 @@ p {
 
 a {
     text-decoration: underline;
+}
+
+hr {
+    margin-bottom: 1rem;
 }
 
 @tailwind components;
