--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,124 +1,69 @@
 @tailwind base;
-
-html, 
-body {
-    height: 100%;
-}
-
-body {
-    background-color: #2B2B2B;
-}
-
-h1, h2 {
-    font-family: Oswald, Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-}
-
-h4 {
-    font-size: 2rem;
-}
-
-p {
-    font-size: 1.25rem;
-    color: white;
-}
-
-a {
-    text-decoration: underline;
-}
-
-hr {
-    margin-bottom: 1rem;
-}
-
 @tailwind components;
-
 @tailwind utilities;
 
-.container {
-    width: 100%;
+body {
+  font-family: brother-1816, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.inner-container {
-    width: 90%;
-    margin: 0px auto;
+.pt-18 {
+  padding-top: 4.5rem;
 }
 
-.transform-50 {
-    transform: translateY(-50%);
+.top-menu {
+  top: 75px;
 }
 
-.top-50-pct {
-    top: 50%;
-}
-
-.text-block p {
-    padding-bottom: 20px;
-}
-
-.text-block a {
-    text-decoration: underline;
-}
-
-.page-heading {
-    color: rgba(160, 174, 192, var(--tw-text-opacity));
-    font-size: 3rem;
-    text-decoration: underline;
-}
-
-/** BLOG POST CSS **/
-.blog-post-content p {
-    margin-bottom: 1rem;
-    font-size: 1.25rem;
-}
-
-.blog-post-content ol, ul {
-    margin-left: 1rem;
-}
-
-.blog-post-content ol li {
-    list-style-type: decimal;
-    margin-bottom: 1rem;
-    font-size: 1.25rem; 
-}
-
-.blog-post-content ul li {
-    list-style-type: disc;
-    margin-bottom: 1rem;
-    font-size: 1.25rem; 
+.insta-width {
+  width: 30%;
 }
 
 @media (min-width: 640px) {
-    .blog-post-content ol, ul {
-        margin-left: 2rem;
-    }
+  .insta-width {
+    width: 10%;
+  }
 }
 
-@media (min-width: 640px) {
-    .page-heading {
-      font-size: 7rem;
-    }
+.slider-images {
+  max-width: 750px;
+}
+
+/* @media (min-width: 640px) {
+  .slider-images {
+    width: 750px;
+  }
+} */
+
+.slick-prev:before,
+.slick-next:before {
+  color: black !important;
 }
   
-@media (min-width: 640px) {
-    .container {
-      max-width: 640px;
-    }
+.hero-background {
+  background-image: url('../images/hero-image.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
 }
-  
-@media (min-width: 768px) {
-    .container {
-      max-width: 768px;
-    }
+
+.text-mb-yellow {
+  color: #FBED0A;
 }
-  
-@media (min-width: 1024px) {
-    .container {
-      max-width: 1024px;
-    }
+
+.text-mb-blue-nav {
+  color: #1E1E72;
 }
-  
-@media (min-width: 1280px) {
-    .container {
-      max-width: 1280px;
-    }
+
+.text-mb-red-box {
+  color: #DD1F27;
+}
+
+.active {
+  background-color: #DD1F27;
+  color: #fff;
+  padding: 2px;
 }
